fix: file path in src

--- a/Shelter/pages/main/main.html
+++ b/Shelter/pages/main/main.html
@@ -96,7 +96,7 @@
                   <button class="secondary_button">Learn more</button>
                 </div>
                 <div class="slider__item">
-                  <img class="slider__img" src="../../assets/woody.png" alt="Woody" />
+                  <img class="slider__img" src="../../assets/Woody.png" alt="Woody" />
                   <div class="name">Woody</div>
                   <button class="secondary_button">Learn more</button>
                 </div>                
