fix: file path in src

--- a/Shelter/pages/pets/pets.html
+++ b/Shelter/pages/pets/pets.html
@@ -54,7 +54,7 @@
               <button class="secondary_button">Learn more</button>
             </div>
             <div class="hero__item">
-              <img class="hero__img" src="../../assets/woody.png" alt="Woody" />
+              <img class="hero__img" src="../../assets/Woody.png" alt="Woody" />
               <div class="name">Woody</div>
               <button class="secondary_button">Learn more</button>
             </div>
